# llama-cpp-python

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  LICENSE.md  Makefile  PKGBUILD  README.md  cuda.Dockerfile  flake.nix  haba  mkdocs.yml  pyproject.toml  ruff.toml  setup.py  test.ipynb
.continue/checks/: accessibility-fix-agent.md  agentsmd-updater.md  improve-test-coverage.md
.continue/rules/: CONTINUE.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATE /: bugs_performance.md
.github/workflows/: build-and-release.yaml  build-docker.yaml  build-light-server-docker.yaml  build-wheel.yml  build-wheels-cuda.yaml  build-wheels-metal.yaml  build-wheels-rocm.yaml  build-wheels-vulkan.yaml  build-windows-cpu.yaml  ci.yml  codeql.yml  fixer.yml  generate-index-from-release.yaml  lint.yaml  linter.yml  protect-branches.yml  publish-to-test-pypi.yaml  publish-to-test.yaml  publish.yaml  security.yml  test-cuda-118-wheels.yaml  test-cuda-13-wheels.yaml  test-cuda-pascal-archs.yaml  test-pypi.yaml  test.yaml  wheels.yaml
charts/llama-cpp-python/: Chart.yaml  readme.md  values.yaml
charts/llama-cpp-python/templates/: app.yaml  pvc.yaml
docker/: Dockerfile  Dockerfile.cuda_simple  README.md  hug_model.py
docker/auto_docker/: hug_model.py  start_server.sh
docker/cuda_simple/: Dockerfile  Dockerfile-CN
docker/light-server/: Dockerfile
docker/musa_simple/: Dockerfile
docker/open_llama/: Dockerfile  build.sh  hug_model.py  start.sh  start_server.sh
docker/openblas_simple/: Dockerfile
docker/poetry/: build.sh  dockerfile  run.sh
docker/simple/: Dockerfile  run.sh
docs/: api-reference.md  changelog.md  index.md  macos_install.md  requirements.txt  server.md  templates.md
docs/install/: gpu.md  macos.md
examples/: basic.py  fastapi_server.py  high_level_api_basic_inference.py  high_level_api_embedding.py  high_level_api_inference.py  high_level_api_streaming.py  langchain_custom_llm.py  low_level_api_chatllama_cpp.py  low_level_api_inference.py  tele-llama.py
examples/batch-processing/: benchmark_response_parser.py  main.py  server.py
examples/batch-processing/tests/: test_multimodal_prompt_plan.py
examples/colab/: Gemma4-12B-QAT.ipynb  notebook.ipynb
examples/gradio_chat/: local.py  server.py
examples/granite_docling/: main.py
examples/hf_pull/: main.py
examples/high_level_api/: fastapi_server.py  high_level_api_embedding.py  high_level_api_inference.py  high_level_api_infill.py  high_level_api_streaming.py  langchain_custom_llm.py  legion_slim5_rtx4060.py  llava_cli.py  openapi_client.py  server_streaming.py  simple_local_chat.py
examples/high_level_api/readme/: llava_clip.md
examples/low_level_api/: Chat.py  Miku.py  ReasonAct.py  common.py  low_level_api_chat_cpp.py  low_level_api_chatllama_cpp.py  low_level_api_llama_cpp.py  parallel.py  quantize.py  util.py
examples/low_level_api/readme/: low_level_api_llama_cpp.md
examples/multimodal/: llava.py
examples/notebooks/: Batching.ipynb  Clients.ipynb  Functions.ipynb  Guidance.ipynb  Multimodal.ipynb  OpenHermesFunctionCalling.ipynb  PerformanceTuning.ipynb  llamas_choice.ipynb
examples/ray/: README.md  llm.py  requirements.txt
examples/server/: README.md  chatbot.py  config.json  server.py
examples/server/configs/: bge-small-en-v1.5.json  gemma-4-12b-it-qat.json  gpt-oss-120b.json  qwen3.5-0.8b.json  qwen3.6-27b.json  qwen3.6-35b-a3b.json
examples/smolvlm/: main.py
llama_cpp/: __init__.py  _ctypes_extensions.py  _ggml.py  _internals.py  _llava.py  _logger.py  _utils.py  gguf_reader.py  llama.py  llama_cache.py  llama_chat_format.py  llama_chat_templates.py  llama_cpp.py  llama_cpp_ext.py  llama_grammar.py  llama_jinja_format.py  llama_speculative.py  llama_tokenizer.py  llama_types.py  llava_cpp.py  mtmd_cpp.py  raw.py  utils.py  version.py
llama_cpp/client/: __init__.py  _client.py  _configuration.py  _serialization.py  _version.py
llama_cpp/client/aio/: __init__.py  _client.py  _configuration.py
llama_cpp/client/aio/operations/: __init__.py  _create_operations.py  _get_operations.py
llama_cpp/client/models/: __init__.py  _enums.py  _models.py
llama_cpp/client/operations/: __init__.py  _create_operations.py  _get_operations.py
llama_cpp/server/: __main__.py  app.py  cli.py  errors.py  model.py  settings.py  types.py  util.py
llama_cpp/v1/: __init__.py  _runtime.py  model.py
scripts/: debug_tokens.py  diagnostics_compare.py  get-releases.sh  hook-llama_cpp.py  release-to-pypi-index.sh  releases-to-pep-503.sh
tests/: test_grammar.py  test_llama.py  test_llama_chat_format.py  test_llama_chat_formatters.py  test_llama_grammar.py  test_llama_speculative.py  test_mmap_gpu_offload.py  test_openai_completions.py  test_server_example_embeddings.py  test_utils.py
wheels/: llama_cpp_python-0.1.26-cp310-cp310-win_amd64.whl
